sort.basic.cocktail.AlgCocktailSort1.scala.error
Erreur de compilation :
AlgCocktailSort1:9: error: '<-' expected but ')' found.
  for (i<= 0 to len -2) {
                      ^AlgCocktailSort1:25: error: illegal start of simple expression
  }
  ^